fixing alignment description with new class

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -435,9 +435,3 @@
 		padding-right: 80px !important;
 	}
 }
-
-@media (max-height: 700px) {
-	div.jss-slider .owl-carousel .jss-title-description .jss-description {
-		display: none !important;
-	}
-}
